animation and favicon

--- a/p2/style.css
+++ b/p2/style.css
@@ -135,22 +135,34 @@ a:hover {
     max-height: 9.4rem;
     margin-bottom: 1rem;
     align-items: center;
+    animation: fadeIn 1.2s ease-in-out forwards;
 }
 
-img[alt="noguchi"] {
-    margin-top: 21.5rem;
-    max-width: 25rem;
-    max-height: 25rem;
+@keyframes fadeIn {
+    from {
+        opacity: 0.7;
+        /* Start at 70% opacity */
+    }
+
+    to {
+        opacity: 1;
+    }
 }
 
 img[alt="heel"] {
-    margin-top: -30rem;
+    margin-top: 4rem;
 }
 
 img[alt="earrings"] {
-    margin-top: -30rem;
+    margin-top: 4rem;
     max-width: 6rem;
     max-height: 6rem;
+}
+
+img[alt="noguchi"] {
+    margin-top: 10.3rem;
+    max-width: 25rem;
+    max-height: 25rem;
 }
 
 img[alt="moon"] {
