--- a/p3/style.css
+++ b/p3/style.css
@@ -49,7 +49,6 @@ body {
     transform: translateX(-50%) rotate(0deg);
     transform-origin: 50% 100%;
     background: transparent;
-
 }
 
 #minute {
@@ -81,12 +80,50 @@ body {
     width: 190px;
     margin-top: -37px;
     margin-left: -60px;
+    cursor: pointer;
+}
+
+.bigfish:hover {
+    width: 190px;
+    margin-top: -37px;
+    margin-left: -60px;
+    animation: wiggle 1s ease-in;
+}
+
+@keyframes wiggle {
+    0% {
+        transform: rotate(5deg);
+    }
+
+    25% {
+        transform: rotate(-5deg);
+    }
+
+    50% {
+        transform: rotate(5deg);
+    }
+
+    75% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(0deg);
+    }
 }
 
 .smallfish {
     width: 165px;
     margin-top: -40px;
     margin-left: -110px;
+    cursor: pointer;
+}
+
+.smallfish:hover {
+    width: 165px;
+    margin-top: -40px;
+    margin-left: -110px;
+    animation: wiggle 1s ease-in;
 }
 
 button {
